tests/enum_from/compile_fail/variant/invalid_attribute_syntax.rs
use enum_convert::EnumFrom;

enum Source {
    Unit,
}

#[derive(EnumFrom)]
#[enum_from(Source)]
enum Target {
    #[enum_from(Source::Unit::Extra)] // Invalid syntax - too many segments
    Unit,
}

fn main() {}
